--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   ],
   "require": {
     "php": ">=5.4",
-    "symfony/dependency-injection": "~2.6",
+    "symfony/dependency-injection": "~2.6|~3.0",
     "doctrine/orm": "~2.5",
     "doctrine/doctrine-bundle": "~1.2"
   },
