Update services.yml to allow Symfony 3.* installation

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -7,4 +7,4 @@ services:
         tags:
             - {name: doctrine.event_subscriber}
         calls:
-            - [setRepositoryPool, [@lag.repository.repository_pool]]
+            - [setRepositoryPool, ['@lag.repository.repository_pool']]
