--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
     "doctrine/doctrine-bundle": "~1.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.7.*",
-    "fabpot/php-cs-fixer": "^1.10"
+    "phpunit/phpunit": "4.7.*"
   },
   "autoload": {
     "psr-0": {
